Sugestões 1 a 4 ok, Sugestão 5 em andamento

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,10 @@ body {
   width: 34px;
 }
 
+.squareWinner {
+  border-bottom: 3px solid #000000;
+}
+
 .board-row:after {
   clear: both;
   content: '';
